@@ -45,7 +45,7 @@ public abstract class BaseFloatClassFieldReader extends BaseClassFieldReader {
     }
 
     public Object getValue(InternalWorkingMemory workingMemory, final Object object) {
-        return new Float( getFloatValue( workingMemory, object ) );
+        return Float.valueOf( getFloatValue( workingMemory, object ) );
     }
 
     public boolean getBooleanValue(InternalWorkingMemory workingMemory, final Object object) {
